# ModESP_v4_max

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  b2b-pitch-deck.skill  build_log.txt  partitions.csv  project.json  sdkconfig.defaults
.github/: copilot-instructions.md
.rules/: _index.md  _meta.md
.rules/context/: memory.md  references.md  roles.md  task.md
.rules/core/: architecture.md  constraints.md  permissions.md
.rules/generation/: output.md  patterns.md
.rules/quality/: eval.md
boards/dev/: bindings.json  board.json
boards/kc868a6/: bindings.json  bindings_2zone.json  board.json
components/jsmn/: CMakeLists.txt
components/modesp_aws/: CMakeLists.txt
components/modesp_aws/include/modesp/net/: aws_iot_service.h
components/modesp_aws/src/: aws_iot_service.cpp  aws_root_ca.h
components/modesp_core/: CMakeLists.txt
components/modesp_core/include/modesp/: app.h  backfill_provider.h  base_module.h  driver_messages.h  message_types.h  module_manager.h  shared_state.h  types.h
components/modesp_core/src/: app.cpp  base_module.cpp  module_manager.cpp  shared_state.cpp
components/modesp_hal/: CMakeLists.txt
components/modesp_hal/include/modesp/hal/: adc_shared.h  driver_interfaces.h  driver_manager.h  hal.h  hal_types.h
components/modesp_hal/src/: adc_shared.cpp  driver_manager.cpp  hal.cpp
components/modesp_json/: CMakeLists.txt
components/modesp_modbus/: CMakeLists.txt  idf_component.yml
components/modesp_modbus/src/: modbus_service.cpp
components/modesp_modbus_master/: CMakeLists.txt  idf_component.yml
components/modesp_modbus_master/src/: modbus_master_service.cpp
components/modesp_mqtt/: CMakeLists.txt
components/modesp_mqtt/include/modesp/net/: mqtt_service.h  ota_handler.h
components/modesp_mqtt/src/: mqtt_service.cpp
components/modesp_net/: CMakeLists.txt  idf_component.yml
components/modesp_net/include/modesp/net/: http_service.h  wifi_service.h  ws_service.h
components/modesp_net/src/: http_service.cpp  wifi_service.cpp  ws_service.cpp
components/modesp_refrigerant/: CMakeLists.txt
components/modesp_refrigerant/src/: saturation.cpp
components/modesp_services/: CMakeLists.txt  idf_component.yml
components/modesp_services/include/modesp/: error_service.h  logger_service.h  service_messages.h  system_monitor.h  watchdog_service.h
components/modesp_services/include/modesp/services/: config_service.h  nvs_helper.h  ota_handler.h  persist_service.h
components/modesp_services/src/: config_service.cpp  error_service.cpp  logger_service.cpp  nvs_helper.cpp  ota_handler.cpp  persist_service.cpp  system_monitor.cpp  watchdog_service.cpp
data/: bindings.json  board.json
data/i18n/: en.json  manifest.json  system_de.json  system_en.json  system_pl.json
data/www/: index.html
data/www/i18n/: de.json  en.json  manifest.json  pl.json
docs/: 01_architecture.md  02_core.md  03_services.md  04_best_practices.md  05_cooling_defrost.md  06_roadmap.md  07_equipment.md  08_webui.md  09_datalogger.md  10_manifest_standard.md  11_protection.md  12_aws_iot.md  13_message_bus.md  CHANGELOG.md  CLOUD_INTEGRATION.md  FEATURES.md  FEATURES_UA.md  HARDWARE_PARTNER_GUIDE.md  README.md  ROADMAP_NEXT.md
docs/plans/: PLAN_A_NAMESPACE.md  PLAN_B_PRESSURE.md  PLAN_C_REFRIGERANT.md  PLAN_F_MODBUS.md  PLAN_OVERVIEW.md
drivers/akv_pulse/: CMakeLists.txt  manifest.json
drivers/akv_pulse/include/: akv_pulse_driver.h
drivers/akv_pulse/src/: akv_pulse_driver.cpp
drivers/digital_input/: CMakeLists.txt  manifest.json
drivers/digital_input/include/: digital_input_driver.h
drivers/digital_input/src/: digital_input_driver.cpp
drivers/ds18b20/: CMakeLists.txt  manifest.json
drivers/ds18b20/include/: ds18b20_driver.h  ds18b20_messages.h
drivers/ds18b20/src/: ds18b20_driver.cpp
drivers/eev_analog/: CMakeLists.txt  manifest.json
drivers/eev_analog/include/: eev_analog_driver.h
drivers/eev_analog/src/: eev_analog_driver.cpp
drivers/eev_pcf8574_stepper/: CMakeLists.txt  manifest.json
drivers/eev_pcf8574_stepper/include/: eev_pcf8574_stepper_driver.h
drivers/eev_pcf8574_stepper/src/: eev_pcf8574_stepper_driver.cpp
drivers/eev_stepper/: CMakeLists.txt  manifest.json
drivers/ntc/: CMakeLists.txt  manifest.json
drivers/pcf8574_input/: CMakeLists.txt  manifest.json
drivers/pcf8574_relay/: CMakeLists.txt  manifest.json
drivers/pressure_adc/: CMakeLists.txt  manifest.json
drivers/relay/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
modules/datalogger/: CMakeLists.txt  manifest.json
modules/defrost/: CMakeLists.txt  manifest.json
modules/eev/: CMakeLists.txt  manifest.json
modules/equipment/: CMakeLists.txt  manifest.json
modules/lighting/: CMakeLists.txt  manifest.json
modules/protection/: CMakeLists.txt  manifest.json
modules/thermostat/: CMakeLists.txt  manifest.json
tests/host/: CMakeLists.txt  base_module_host.cpp  driver_manager_host.cpp  module_manager_host.cpp  run_tests.bat  shared_state_host.cpp  test_datalogger.cpp  test_defrost.cpp  test_equipment.cpp  test_main.cpp  test_protection.cpp  test_saturation.cpp  test_saturation_standalone.cpp  test_thermostat.cpp
tests/host/mocks/: ctime_compat.h  driver_messages_mock.h  esp_http_server.h  esp_log.h  esp_log_mock.h  esp_timer.h  esp_timer_mock.h  etl_message_mock.h  freertos_mock.h  hal_types_mock.h  host_prefix.h  mock_drivers.h
tests/host/mocks/driver/: i2c_master.h
tests/host/mocks/esp_log/: esp_log.h
tests/host/mocks/esp_timer/: esp_timer.h
tests/host/mocks/freertos/: FreeRTOS.h  semphr.h  task.h
tools/: create_overview_doc.py  create_user_manual.js  generate_ui.py
tools/tests/: conftest.py  test_cpp_host.py  test_driver_validator.py  test_features.py  test_generator.py  test_hil.py  test_inputs_validation.py  test_kc868a6.py  test_modules.py  test_validator.py
webui/: dev-server.js  package-lock.json  package.json  rollup.config.js
webui/public/: index.html
webui/scripts/: deploy.js
webui/src/: App.svelte  main.js
(+134 files in other folders)
